# MonshinMate

./: .dockerignore  .env firebase  .env.docker.example  .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  GEMINI.md  LICENSE  Makefile  README.md  dermatology_intake.json  dev.bat  dev.ps1  dev.sh  docker-compose.yml  firebase.json  patch_main.diff  plannedSystem.md  tmp.py
.kamui/: model-versions-cache.json  system-graph-state.json  tasks-state.json
backend/: .env  .env copy.example  Dockerfile  README.md  pyproject.toml
backend/app/: app.sqlite3  config.py  db.py  llm_gateway.py  llm_provider_registry.py  main.py  notifications.py  pdf_renderer.py  personal_info.py  postal_code_lookup.py  secret_manager.py  session_fsm.py  structured_context.py  validator.py
backend/app/db/: __init__.py  firestore_adapter.py  interfaces.py  sqlite_adapter.py
backend/app/llm_providers/: __init__.py  gcp_vertex.py
backend/monshinmate_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_admin.py  test_api.py  test_database_status.py  test_export_import.py  test_firestore_adapter.py  test_gcp_vertex_provider.py  test_healthz.py  test_postal_code_lookup.py  test_system_theme.py  test_totp_missing_secret.py  test_validator.py
backend/tools/: audit_dump.py  collect_licenses.py  encrypt_totp_secrets.py  reset_admin_password.py
data/: .gitignore
docs/: Accessibility_And_Typography_Verification.md  LLMcommunication.md  PlannedDesign.md  UI_Redesign_Plan.md  admin_system_setup.md  admin_user_manual.md  body_schema_images.md  docker_setup.md  (+5 more)
(+132 files in other folders)
