[project]
name = "monshinmate-backend"
version = "0.1.0"
description = "MonshinMate の最小バックエンド"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "passlib[bcrypt]",
    "pyotp",
    "qrcode[pil]",
    "python-jose[cryptography]",
    "cryptography",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
