[project]
name = "monshinmate-backend"
version = "0.1.0"
description = "MonshinMate の最小バックエンド"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "passlib[bcrypt]",
    "pyotp",
    "qrcode[pil]",
    "python-jose[cryptography]",
    "cryptography",
    "reportlab",
    "python-dotenv",
    "couchdb",
    "python-multipart",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
